<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- DEFINIÇÃO DO LAYOUT -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo_hint" />

            <EditText
                android:id="@+id/txt_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc_hint" />

            <EditText
                android:id="@+id/txt_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foto_url_hint" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/save"
                android:onClick="saveAction"/>

        </LinearLayout>

    </ScrollView>

</layout>
