<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- 1. DECLARAÇÃO DAS VARIÁVEIS -->
    <data>

        <variable
            name="organico"
            type="br.utp.sustentabilidade.models.Organico" />
    </data>

    <!-- DEFINIÇÃO DO LAYOUT -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/organico_txt_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{organico.titulo}"
                android:hint="@string/titulo_hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <EditText
                android:id="@+id/organico_txt_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{organico.descricao}"
                android:hint="@string/desc_hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <EditText
                android:id="@+id/organico_txt_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{organico.local}"
                android:hint="@string/local_hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <EditText
                android:id="@+id/organico_txt_local_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{organico.localUrl}"
                android:hint="@string/local_url_hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:onClick="openURL"
                android:focusableInTouchMode="false"/>

            <EditText
                android:id="@+id/organico_txt_foto_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{organico.foto}"
                android:hint="@string/foto_url_hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:visibility="gone"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/organico_img_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/save"
                android:onClick="saveAction"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</layout>
